# stsci.image

./: .gitignore  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  test_devdeps.yml
docs/source/: conf.py
stsci/image/: __init__.py  combine.py
stsci/image/test/: test_average.py  test_median.py  test_minimum.py
