[project]
name = 'stsci.image'
description = 'Image array manipulation functions'
readme = 'README.md'
requires-python = '>=3.6'
license = { file = 'LICENSE' }
authors = [{ name = 'STScI', email = 'help@stsci.edu' }]
classifiers = [
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Topic :: Scientific/Engineering :: Astronomy',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
dependencies = [
    'numpy>=1.14',
    'scipy',
]
dynamic = ['version']

[project.optional-dependencies]
test = [
    'pytest',
]
docs = [
    'numpydoc',
    'sphinx',
    'sphinx-automodapi',
    'sphinx-rtd-theme',
    'stsci-rtd-theme',
    'tomli; python_version <"3.11"',
]

[project.urls]
'repository' = 'https://github.com/spacetelescope/stsci.image'

[build-system]
requires = [
    "setuptools >=61",
    "setuptools_scm[toml] >=3.4",
    "wheel",
    "oldest-supported-numpy; python_version>='3.7'",
    "numpy==1.14.6; python_version<'3.7'",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ['stsci']

[tool.setuptools.package-data]
'*' = ['LICENSE.txt']
