[project]
name = "stsci.image"
description = "Image array manipulation functions"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "STScI", email = "help@stsci.edu" }]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy",
    "scipy",
]
dynamic = ['version']

[project.optional-dependencies]
test = [
    'pytest',
]
docs = [
    'numpydoc',
    'sphinx',
    'sphinx-automodapi',
    'sphinx-rtd-theme',
    'stsci-rtd-theme',
    'tomli; python_version <"3.11"',
]

[project.urls]
'repository' = 'https://github.com/spacetelescope/stsci.image'

[build-system]
requires = [
    "setuptools >=61.2",
    "setuptools_scm[toml] >=6.2",
    "wheel",
    "oldest-supported-numpy",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ['stsci']

[tool.setuptools.package-data]
"*" = ["LICENSE.txt"]

[tool.setuptools_scm]
